<resources>
    <!-- main -->
    <string name="app_name">JoyLive Unofficial</string>
    <string name="app_title">JoyLive - Unofficial</string>
    <string name="app_favorite">JoyLive - Favorites</string>
    <string name="welcome_text">JoyLive / GogoLive\n&#8212; &#8212; &#8212;\nThe Best Live Show Ever!</string>
    <!-- menu -->
    <string name="menu_favorites">Favorites</string>
    <string name="menu_reset">Reset List</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <!-- dialog -->
    <string name="member">Member</string>
    <string name="nickname">Nickname</string>
    <string name="announcement">Announcement</string>
    <string name="fans">Fans</string>
    <string name="price">Price</string>
    <string name="live_since">Live Since</string>
    <string name="last_seen">Last Seen</string>
    <string name="viewer">Viewer</string>
    <string name="registration">Device Registration</string>
    <string name="serial">Serial :</string>
    <string name="key">Key :</string>
    <!-- favorite -->
    <string name="no_favorite_users">No Favorite User!</string>
    <string name="last_seen_colon">Last Seen :</string>
    <string name="status_checking">Checking&#8230;</string>
    <string name="status_live">Live Now</string>
    <string name="status_offline">Offline</string>
    <string name="status_error">Error</string>
    <string name="status_login">Login</string>
    <!-- player -->
    <string name="unknown_user">Unknown User</string>
    <string name="show_is_over">Show is Over</string>
    <string name="network_problem">Network Problem</string>
    <string name="waiting_broadcaster">waiting for broadcasters online&#8230;</string>
    <string name="try_to_connect">trying to connect&#8230;</string>
    <!-- toast -->
    <string name="press_back_twice">Press twice to close</string>
    <string name="something_wrong">Something went wrong! Try again later.</string>
    <string name="play_from_external">Play Stream from External Link!</string>
    <!-- universal -->
    <string name="colon">:</string>
</resources>
