<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            app:civ_border_color="#AFB1B3"
            app:civ_border_width="2dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dialog_label"
            android:layout_height="wrap_content"
            android:text="@string/member" />

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dialog_label"
            android:layout_height="wrap_content"
            android:text="@string/nickname" />

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dialog_label"
            android:layout_height="wrap_content"
            android:text="@string/announcement" />

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dialog_label"
            android:layout_height="wrap_content"
            android:text="@string/last_seen" />

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_lastseen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true" />

    </LinearLayout>

</LinearLayout>